# RobotArmROSGazebo

./: LICENSE  README.md  doc.txt
RobotModel/: robot_arm.f3d
src/collision_detector_node/: CMakeLists.txt  package.xml
src/collision_detector_node/src/: collision_detector_node.cpp
src/movit_robot_arm/: CMakeLists.txt  package.xml
src/movit_robot_arm/config/: fake_controllers.yaml  gazebo_robot_arm.urdf  gazebo_ros_control.yaml  joint_limits.yaml  new_ros_controller.yaml  ompl_planning.yaml  robot_arm.srdf  stomp_planning.yaml
src/movit_robot_arm/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  launcher.launch  launcher_full.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
src/robot_arm_description/: CMakeLists.txt  package.xml
src/robot_arm_description/config/: joint_trajectory_controller.yaml
src/robot_arm_description/launch/: arm_urdf.launch  controller.launch  controller.yaml  display.launch  empty_world.launch  gazebo.launch
src/robot_arm_description/meshes/: base_link.stl  finger1_1.stl  finger2_1.stl  forearm1_1.stl  forearm2_1.stl  grip_pad1_1.stl  grip_pad2_1.stl  upperarm_1.stl  waist_1.dae  waist_1.stl  wrist1_1.stl  wrist2_1.stl
src/robot_arm_description/urdf/: robot_arm.gazebo  robot_arm.trans  robot_arm.urdf  robot_arm.xacro
src/robot_arm_description/world/: robot_world  world.world
